fixed a bug with auth on quiz and wrong answer not showing space bug and logo not leading to homepage on quiz bug and added cursor on hover to logo

--- a/src/components/Logo.css
+++ b/src/components/Logo.css
@@ -5,6 +5,11 @@
   padding-left: 10px;
 }
 
+.firstWordOfLogo:hover{
+  cursor: pointer;
+  opacity: 0.8;
+}
+
 .secondWordOfLogo {
   font-size: 3.2rem;
 }
@@ -18,3 +23,4 @@
     font-size: 2rem;
   }
 }
+
